--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
     border-radius: 9px;
     /* height: 1rem; */
     margin-top: 0px;
+    margin-bottom: 50px;
     z-index: 1;
 }
 .topic p{
@@ -78,3 +79,15 @@ a{
     transform: scale(0.95);  /* Slight shrink on click */
   }
  
+footer{
+    background-color: black;
+}
+.footer-para{
+    /* background-color: black;
+    margin: 0;
+    padding: 0; */
+    color: rgb(221, 215, 215);
+    font-size: 10px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+}
