--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@ body{
     /* margin: 0; */
     text-align: center;
 }
-
+h1{
+    position: relative;
+    top: 12px;
+}
 /* .inter .box .topic p{
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -19,6 +22,8 @@ body{
 .box{
     /* border: 2px solid black; */
     border-radius: 9px;
+    /* position: relative; */
+    /* top: 40px; */
 }
 .subject-container{
     display:inline-block;
@@ -81,6 +86,8 @@ a{
 footer{
     background-color: black;
     color: wheat;
+    position: relative;
+
 }
 .footer-para{
     /* background-color: black;
@@ -94,4 +101,30 @@ footer{
 
 .hr-top{
     margin: 0;
+}
+
+.announcement-bar{
+    background-color: #fdd835;
+    overflow: hidden;
+    white-space: nowrap;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    padding: 10px 0;
+    font-weight: bold;
+    color: #000;
+}
+.scroll-text{
+    display: inline-block;
+    padding-left:100%;
+    animation: scroll-left 20s linear infinite;
+}
+@keyframes scroll-left {
+    0%{
+        transform: translateX(0%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
 }
