--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1{
     border-radius: 9px;
     /* position: relative; */
     /* top: 40px; */
+    margin: 8px;
 }
 .subject-container{
     display:inline-block;
@@ -33,7 +34,14 @@ h1{
     border-radius: 9px;
     background-color: #ad88be;
     width: 320px;
+    /* margin: 8px; */
 
+}
+.subject-container h3{
+    margin-bottom: 2px;
+}
+.subject-container p{
+    margin-top: 2px;
 }
 .topics-container{
     /* border: 2px solid rgb(154, 60, 60); */
@@ -44,6 +52,7 @@ h1{
     margin-bottom: 50px;
     z-index: 1;
 }
+
 .topic p{
     margin: 10px 0px 10px 7px;
     display: flex;
@@ -94,6 +103,9 @@ footer{
     padding-left: 0;
 
 }
+footer>p{
+    font-size: 12px;
+}
 .footer-para{
     /* background-color: black;
     margin: 0;
@@ -116,7 +128,7 @@ footer{
     top: 0;
     width: 100%;
     z-index: 1000;
-    padding: 10px 0;
+    padding: 8px 0;
     font-weight: bold;
     color: #000;
 }
