--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1{
     margin: 10px 0px 10px 7px;
     display: flex;
     text-align: left;
-
+    
     /* font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -67,6 +67,28 @@ h1{
   font-style: normal;
 
 }
+.topic span{
+    position:relative;
+    z-index: 1000;
+    top: 0;
+}
+#topic-i{
+    /* display: inline; */
+    /* position: relative; */
+    /* text-align: left; */
+    top: -10px;
+    right: 30px;
+}
+.topic>span{
+    display: flex;
+    position: relative;
+    /* text-align: right; */
+    justify-content:right;
+    /* justify-content: end; */
+    top: -32px;
+    margin-right: 8px;
+    /* z-index: 1000; */
+}
 .topic-links{
     display: flex;
     margin-left: 10px;
@@ -74,7 +96,7 @@ h1{
     justify-content: space-between;
     
 }
-a{
+.topic>.topic-links>a{
     text-decoration: none;
     border: 1px solid black;
     padding: 0 5px 0 5px;
@@ -89,7 +111,7 @@ a{
     display: inline-block;
   } */
   
-  a:active {
+.topic>.topic-links>a:active {
     transform: scale(0.95);  /* Slight shrink on click */
   }
  
