--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1{
     z-index: 1000;
     top: 0;
 }
-#topic-i{
+.topic-i{
     /* display: inline; */
     /* position: relative; */
     /* text-align: left; */
