--- a/style.css
+++ b/style.css
@@ -169,3 +169,32 @@ footer>p{
 }
 
 
+button {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  padding: 5px 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  display: inline-block;
+  font-weight: bold;
+}
+button:hover {
+  background-color: #45a049;
+}
+
+/* blinking button */
+.new-badge {
+  background-color: red;
+  color: white;
+  font-size: 10px;
+  padding: 2px 6px;
+  margin-left: 8px;
+  border-radius: 12px;
+  font-weight: bold;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
+}
