--- a/style.css
+++ b/style.css
@@ -198,3 +198,10 @@ button:hover {
   0%, 100% { opacity: 1; }
   50% { opacity: 0; }
 }
+
+/* test cell */
+.test{
+    font-size: 14px;
+    font-weight: 500;
+    font-family: "Poppins", sans-serif;
+}
