--- a/style.css
+++ b/style.css
@@ -250,3 +250,22 @@ button:hover {
   opacity: 1;
   transform: translateY(0);
 }
+
+
+/* for map */
+/* 
+.responsive-iframe-container {
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 75%; 
+  height: 0;
+}
+
+ .responsive-iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}  */
